# analog-flow-meter

./: CLAUDE.md  README.md  doover_config.json  pyproject.toml
.github/workflows/: build-image.yml  validate-schema.yml
simulators/: app_config.json  docker-compose.yml
simulators/sample/: main.py  pyproject.toml
src/analog_flow_meter/: __init__.py  app_config.py  app_state.py  app_tags.py  app_ui.py  application.py
tests/: test_imports.py
