[project]
name = "analog-flow-meter"
version = "0.1.0"
description = "Doover device app for analog / pulse flow meters"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydoover>=1.5.0",
    "transitions>=0.9.2",
]

[project.scripts]
doover-app-run = "analog_flow_meter:main"
export-config = "analog_flow_meter.app_config:export"
export-ui = "analog_flow_meter.app_ui:export"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "aiohttp>=3.11.18",
    "grpcio>=1.71.0",
    "protobuf>=6.30.2",
    "pytest>=8.3.5",
    "pytest-asyncio>=0.26.0",
    "requests>=2.32.3",
]
